# django_telebot

./: .env.example  .gitignore  Dockerfile  DockerfileTelegram  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
config/nginx/: default.conf
djbot/: Dockerfile  manage.py  requirements.txt
djbot/djbot/: asgi.py  settings.py  urls.py  wsgi.py
djbot/main/: admin.py  forms.py  keyboards.py  models.py
djbot/main/management/commands/: bot.py
djbot/main/migrations/: 0001_initial.py  0002_alter_user_profile_options_message.py  0003_alter_user_profile_external_id.py  0004_game.py  0005_user_profile_about_user_profile_main_game_and_more.py  0006_user_profile_in_search.py
djbot/scripts/: entrypoint.sh
djbot/uwsgi/: uwsgi.ini
scripts/: entrypoint.sh
src/djbot/: asgi.py  settings.py  urls.py
src/main/: apps.py  models.py
src/main/management/commands/: bot.py  keyboards.py
src/main/migrations/: 0001_initial.py  0002_alter_game_gamename_alter_userprofile_main_game_and_more.py
src/scripts/: entrypoint.sh  entrypoint_bot.sh
src/utils/: logger.py
src/uwsgi/: uwsgi.ini
